--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-color: #000000eb;
+    background-color: #000000;
     color: white;
 }
 
@@ -190,7 +190,8 @@ ul {
 }
 
 .card-projeto {
-    background-color: #1d1d1d;
+    background-color: #080808;
+    border: 2px solid #607d8b2e;
     border-radius: 20px;
     overflow: hidden;
     width: 90%;
@@ -333,7 +334,7 @@ footer {
     display: flex;
     justify-content: space-around;
     padding: 25px 5%;
-    border-top: 1px solid #0c0d0d;
+    border-top: 1px solid #607d8b2e;
     gap: 50px;
     background-color: #0c0d0d;
     font-size: 16px;
@@ -431,11 +432,11 @@ b {
     padding: 30px 30px;
     margin-right: 250px;
     margin-left: 250px;
-    background-color: #2196f300;
+    background-color: #080808;
     border-radius: 5px;
     border: 2px solid #607d8b2e;
     margin-top: 115px;
-    margin-bottom: 115px;
+    margin-bottom: 100px;
 }
 
 .titulo-aluno-devclub {
