--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ body {
 
 .secao {
     padding: 100px 0;
-    padding-left:100px;
+    padding-left:50px;
     margin-left: 30px;
-    padding-right:100px;
+    padding-right:50px;
 
 }
 
@@ -58,7 +58,7 @@ body {
         width: 450px;
         height: auto;
         border-radius: 225px;
-        margin-right: 70px;
+        margin-right: 30px;
         cursor: none;
     }
 
@@ -70,8 +70,8 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 30px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
     align-items: center;
     border-bottom: 1px solid #c3cad51a;
 }
@@ -90,7 +90,9 @@ ul {
     padding: 60px;
     min-height: 85vh;
     margin: 0px auto;
-    margin-left: 70px;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-left: 30px;
 }
 
 .principal h2 {
@@ -234,7 +236,7 @@ ul {
 
 .conteudo-sobre p {
     margin-bottom: 20px;
-    color: #c3cad5
+    color: #c3cad5;
 }
 
 .habilidades {
@@ -273,9 +275,9 @@ ul {
 }
 .modulos-curso-devclub {
     background-color: rgb(77, 124, 254, 0.2);
-    padding: 10px 10px;
+    padding: 10px 8px;
     border-radius: 20px;
-    font-size: 14px;
+    font-size: 13px;
     color: #3557f2;
     margin-bottom: 10px;
     margin-right: 10px;
@@ -339,16 +341,6 @@ transition: transform 0.4s ease-in-out;
 .efeito-cursor:hover {
     transform: translateY(-7px);
 }
-
-.efeito-modulo-curso {
-    transition: transform 0.4s ease-in-out;
-    }
-    
-.efeito-modulo-curso:hover {
-        transform: translateY(-3px);
-        border: 1px solid #3557f2;
-        padding: 9px 10px;
-    }
 
 .efeito-menu {
     transition: transform 0.4s ease-in-out;
@@ -425,6 +417,7 @@ b {
     border: 2px solid #607d8b2e;
     margin-top: 115px;
     margin-bottom: 100px;
+    gap: 6px;
 }
 
 .titulo-aluno-devclub {
@@ -432,7 +425,6 @@ b {
     font-size: 35px;
     margin-bottom: 15px;
     font-weight: 900;
-    margin-top: -25px;
 }
 
 .descricao-aluno-devclub {
@@ -461,14 +453,33 @@ b {
 }
 
 @media (max-width: 768px) {
+
     header {
-        padding: 20px;
-        
+        margin-left: 100px;
+        margin-right: 100px;
+        align-items: center;
+        border-bottom: 0px solid #c3cad51a;
+        display: inline;
+    }
+
+    h1 {
+        display: flex;
+        justify-content: center;
     }
 
     ul {
         gap: 20px;
-        justify-content: flex-start;
+        justify-content: center;
+        margin-left: 18px;
+    }
+
+    .titulo-pagina {
+        font-size: 42px;
+        color: #3557f2;
+        font-weight: 700;
+        font-style: italic;
+        cursor: none;
+        margin: 5px 0px 0px;
     }
 
     .secao {
@@ -588,5 +599,91 @@ b {
         border-radius: 20px;
         overflow: hidden;
         width: 100%;
+    }
+
+    .principal {
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        padding: 50px;
+        min-height: 60vh;
+        margin: 0px auto;
+        text-align: center;
+    }
+
+    .botao {
+        background-color: #3557f2;
+        color: white;
+        font-size: 20px;
+        padding: 15px 30px;
+        border-radius: 5px;
+        display: inline-block;
+        font-weight: bold;
+        box-shadow: 0px 0px 0px #3557f2;
+        margin-bottom: 20px;
+    }
+
+    .botoes-contato {
+        display: flex;
+        flex-wrap: wrap;
+        gap:10px;
+        justify-content: center;
+        align-items: center;
+        max-width: 800px;
+        margin: 0 auto;
+    }
+
+    footer {
+    display: flex;
+    justify-content: space-around;
+    padding: 25px 5%;
+    gap: 50px;
+    background-color: #0c0d0d;
+    font-size: 16px;
+    align-items: center;
+    }
+
+    .titulo-big {
+        font-size: 52px;
+        font-style: italic;
+        cursor: none;
+        margin-bottom: 15px;
+    }
+
+    .link-menu {
+        background-color: #3557f2;
+        color: #ffffff;
+        padding: 15px 15px;
+        border-radius: 10px;
+        display: none;
+    }
+
+    .principal span {
+        color: #3557f2;
+        cursor: none;
+    }
+
+    b {
+        font-weight: 600;
+        font-size: 45px;
+        cursor: none;
+    }
+
+    h2 bdi::before {
+        content: "";
+        display: none;
+        width: 100px;
+        height: 5px;
+        background-color: #3557f2;
+        border-radius: 15px;
+    }
+
+    .img-apresentacao {
+        width: 450px;
+        height: auto;
+        border-radius: 225px;
+        margin-right: 70px;
+        cursor: none;
+        display: none;
     }
 }
