--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ ul {
     font-weight: 700;
 }
 
-.rodape-link {
+.rodape-nome {
     color: #3557f2;
 }
 
@@ -452,6 +452,10 @@ b {
     font-style: italic;
 }
 
+.footer-border {
+    display: none;
+}
+
 .header-border {
     display: none;
 }
@@ -590,9 +594,9 @@ b {
 
     .tag-habilidades {
         background-color: rgb(77, 124, 254, 0.2);
-        padding: 10px 17px;
+        padding: 12px 10px;
         border-radius: 20px;
-        font-size: 16px;
+        font-size: 20px;
         color: #3557f2;
         margin-bottom: 10px;
         margin-right: 12px;
@@ -642,7 +646,6 @@ b {
     justify-content: space-around;
     padding: 25px 5%;
     gap: 50px;
-    background-color: #0c0d0d;
     font-size: 16px;
     align-items: center;
     }
@@ -712,4 +715,12 @@ b {
             border-color: #c3c3c3;
             opacity: 0.3;
         }
+
+    .footer-border {
+        display: flex;
+        width: 350px;
+        margin: auto;
+        border-color: #c3c3c3;
+        opacity: 0.3;
+    }
     }
